--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>CI / CD</a>.</p>
+    <p>CI / CD Turma 11/08</a>.</p>
 </div>
